[package]
name = "mpart"
version = "0.18.0"
description = "A backend-agnostic extension for HTTP libraries that provides support for POST multipart/form-data requests on both client and server."
keywords = ["form-data", "hyper", "iron", "http", "upload"]
repository = "http://github.com/Dylan-DPC/mpart"
documentation = "http://docs.rs/mpart/"
license = "MIT OR Apache-2.0"
readme = "README.md"
edition = "2021"

[dependencies]
lazy_static = { version = "1.2.0", optional = true }
log = "0.4"
mummer = { path = "../mummer/mummer" }
mime = "0.3.14"
rand = "0.8"
safemem = { version = "0.3", optional = true }
tempfile = "3"
thiserror = "1.0.38"

#Server Dependencies
reducks_buffer = { path = "../reducks_buffer/", optional = true, default-features = false } 
httparse = { version = "1.2", optional = true }
twoway = { version = "0.1", optional = true }

# Optional Integrations
hyper = { version = ">=0.9, <0.11", optional = true, default-features = false }
tiny_http = { version = "0.6", optional = true }

# Only for Rocket example but dev-dependencies can't be optional
rocket = { version = "0.4", optional = true }

[dev-dependencies]
env_logger = "0.5"

[features]
client = []
default = ["client", "hyper", "mock", "server", "tiny_http"]
server = ["reducks_buffer", "httparse", "safemem", "twoway"]
mock = []
nightly = []
bench = []

